:white_check_mark: tests: Added tests for the EnvProxy